# yyfe-lab

./: .gitattributes  .gitignore  README.md  policy.json  pyproject.toml
docs/: POLICY.md
output/: plan.json
src/yyfe/: __main__.py  cli.py
src/yyfe/core/: llm_codex.py  plan.py  policy.py  profiles.py  runner.py
src/yyfe/profiles/: lab.py
src/yyfe_lab/: math_utils.py
tasks/: claude_planner_prompt.txt  codex_patcher_prompt.txt  task_001.md
tests/: test_math_utils.py  test_math_utils_contract.py  test_policy_gate.py
tools/: check_bom.py  fix_bom.py  fix_crlf_keep_bom.py  golden.ps1  qa.ps1  smoke.ps1  write_nobom.ps1
yyfe/: __init__.py  cli.py
yyfe/core/: llm_claude.py  llm_codex.py  patcher.py  policy.py  runner.py
