[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yyfe-lab"
version = "0.0.0"
description = "A tiny Python lab project with tests and a QA gate."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]